--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Dres.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Dres.cfg
@@ -21,13 +21,17 @@
 			emissivity = 0.88
 			coreTemperatureOffset = 0
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,10000,10000,30000,50000,100000,200000,300000
+			timewarpAltitudeLimits = 0 10000 10000 30000 50000 100000 200000 300000
 			sphereOfInfluence = 32832839.5767762
 			hillSphere = 92059713.5005964
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/dres_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -103,24 +107,36 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.1764706,0.1372549,0.09803922,0.5254902
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 95000
+			fadeStart = 0
 			fadeEnd = 100000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 0.078125
 				texture = BUILTIN/dwarfplanet100
+				mainTex = BUILTIN/dwarfplanet100
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/dwarfplanet101
+				bumpMap = BUILTIN/dwarfplanet101
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -131,6 +147,7 @@
 			fadeStart = 100000
 			fadeEnd = 110000
 			deactivateAltitude = 115000
+			mapMaxHeight = 8000
 			Material
 			{
 				saturation = 1
@@ -210,12 +227,9 @@
 			{
 				bounceCombine = Average
 				frictionCombine = Maximum
-				frictionDirection2 = 0,0,0
 				bounciness = 0
 				staticFriction = 0.8
-				staticFriction2 = 0
 				dynamicFriction = 0.6
-				dynamicFriction2 = 0
 			}
 			Mods
 			{
@@ -270,12 +284,10 @@
 				AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
-					cameraAlt = 0
-					cameraAtmosAlt = 0
 					DEBUG_SetEveryFrame = True
 					globalDensity = -1E-05
-					heightDensAtViewer = 0
 					heightFalloff = 6.75
+					oceanDepth = 0
 					order = 100
 					enabled = True
 				}
