further kittopia export fix

--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Gilly.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Gilly.cfg
@@ -1,4 +1,4 @@
-// KittopiaTech - a Kopernicus Visual Editor
+﻿// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -21,13 +21,17 @@
 			emissivity = 0.85
 			coreTemperatureOffset = 20
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,8000,8000,8000,20000,40000,80000,100000
+			timewarpAltitudeLimits = 0 8000 8000 8000 20000 40000 80000 100000
 			sphereOfInfluence = 126123.271704568
 			hillSphere = 142427.423478875
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/gilly_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -73,24 +77,36 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.3208955,0.250197,0.2179216,0.2509804
-			cameraSmaRatioBounds = 0.12,12
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 135000
+			fadeStart = 0
 			fadeEnd = 140000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 1
 				texture = BUILTIN/evemoon100
+				mainTex = BUILTIN/evemoon100
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/evemoon101
+				bumpMap = BUILTIN/evemoon101
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -101,6 +117,7 @@
 			fadeStart = 140000
 			fadeEnd = 145000
 			deactivateAltitude = 180000
+			mapMaxHeight = 9000
 			Material
 			{
 				saturation = 1
