--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
@@ -21,13 +21,17 @@
 			emissivity = 0.7
 			coreTemperatureOffset = 1
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,3000,3000,6000,12000,24000,48000,60000
+			timewarpAltitudeLimits = 0 3000 3000 6000 12000 24000 48000 60000
 			sphereOfInfluence = 2247428.3879023
 			hillSphere = 3730392.49065433
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/minmus_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -109,24 +113,36 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.28182,0.2276048,0.3137255,0.5764706
-			cameraSmaRatioBounds = 0.12,12
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 135000
+			fadeStart = 0
 			fadeEnd = 140000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 0.6343284,0.6343284,0.6343284,1
-				specular = 0.119403,0.119403,0.119403,1
+				specColor = 0.119403,0.119403,0.119403,1
 				shininess = 0.03
 				texture = BUILTIN/NewMunSurfaceMap00
+				mainTex = BUILTIN/NewMunSurfaceMap00
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/NewMunSurfaceMap01
+				bumpMap = BUILTIN/NewMunSurfaceMap01
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -137,6 +153,7 @@
 			fadeStart = 140000
 			fadeEnd = 145000
 			deactivateAltitude = 180000
+			mapMaxHeight = 4000
 			Material
 			{
 				saturation = 1
@@ -216,12 +233,9 @@
 			{
 				bounceCombine = Average
 				frictionCombine = Maximum
-				frictionDirection2 = 0,0,0
 				bounciness = 0
 				staticFriction = 0.8
-				staticFriction2 = 0
 				dynamicFriction = 0.6
-				dynamicFriction2 = 0
 			}
 			Mods
 			{
