--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
@@ -21,13 +21,17 @@
 			emissivity = 0.7
 			coreTemperatureOffset = 40
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,24500,24500,24500,40000,60000,80000,100000
+			timewarpAltitudeLimits = 0 24500 24500 24500 40000 60000 80000 100000
 			sphereOfInfluence = 2406401.44479404
 			hillSphere = 3893201.55262435
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/vall_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -79,24 +83,36 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.4338013,0.6103926,0.7089552,0.5764706
-			cameraSmaRatioBounds = 0.12,12
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 295000
+			fadeStart = 0
 			fadeEnd = 300000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 0.6044776,0.6044776,0.6044776,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 0.078125
 				texture = BUILTIN/gp1icemoon00
+				mainTex = BUILTIN/gp1icemoon00
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/gp1icemoon01
+				bumpMap = BUILTIN/gp1icemoon01
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -107,6 +123,7 @@
 			fadeStart = 300000
 			fadeEnd = 325000
 			deactivateAltitude = 330000
+			mapMaxHeight = 20000
 			Material
 			{
 				saturation = 1
