--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Bop.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Bop.cfg
@@ -21,13 +21,17 @@
 			emissivity = 0.8
 			coreTemperatureOffset = 10
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,24500,24500,24500,40000,60000,80000,100000
+			timewarpAltitudeLimits = 0 24500 24500 24500 40000 60000 80000 100000
 			sphereOfInfluence = 1221060.86284253
 			hillSphere = 2029674.44211376
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/bop_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -85,24 +89,36 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.3656716,0.3147959,0.2483292,0.5764706
-			cameraSmaRatioBounds = 0.12,12
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 135000
+			fadeStart = 0
 			fadeEnd = 140000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 0.078125
 				texture = BUILTIN/gp1minormoon100
+				mainTex = BUILTIN/gp1minormoon100
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/gp1minormoon101
+				bumpMap = BUILTIN/gp1minormoon101
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -113,6 +129,7 @@
 			fadeStart = 140000
 			fadeEnd = 145000
 			deactivateAltitude = 180000
+			mapMaxHeight = 30000
 			Material
 			{
 				saturation = 1
