--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eeloo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eeloo.cfg
@@ -1,4 +1,4 @@
-// KittopiaTech - a Kopernicus Visual Editor
+﻿// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -21,13 +21,17 @@
 			emissivity = 0.5
 			coreTemperatureOffset = 0
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,4000,4000,20000,30000,40000,70000,150000
+			timewarpAltitudeLimits = 0 4000 4000 20000 30000 40000 70000 150000
 			sphereOfInfluence = 119082941.647812
 			hillSphere = 266016718.015223
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/eeloo_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -97,24 +101,36 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.2067634,0.2082682,0.2089552,0.5254902
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 95000
+			fadeStart = 0
 			fadeEnd = 100000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0.07462686,0.07462686,0.07462686,1
+				specColor = 0.07462686,0.07462686,0.07462686,1
 				shininess = 0.4605465
 				texture = BUILTIN/snowydwarfplanet00
+				mainTex = BUILTIN/snowydwarfplanet00
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/snowydwarfplanet01
+				bumpMap = BUILTIN/snowydwarfplanet01
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -125,6 +141,7 @@
 			fadeStart = 100000
 			fadeEnd = 110000
 			deactivateAltitude = 120000
+			mapMaxHeight = 6000
 			Material
 			{
 				saturation = 1
@@ -507,12 +524,10 @@
 				AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
-					cameraAlt = 0
-					cameraAtmosAlt = 0
 					DEBUG_SetEveryFrame = True
 					globalDensity = -1E-05
-					heightDensAtViewer = 0
 					heightFalloff = 6.75
+					oceanDepth = 0
 					order = 100
 					enabled = True
 				}
@@ -574,6 +589,7 @@
 					persistance = 0.7
 					seed = 78967456
 					mode = Low
+					lacunarity = 3
 					order = 30
 					enabled = True
 				}
