--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Ike.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Ike.cfg
@@ -21,13 +21,17 @@
 			emissivity = 0.86
 			coreTemperatureOffset = 2
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,5000,5000,10000,25000,50000,100000,200000
+			timewarpAltitudeLimits = 0 5000 5000 10000 25000 50000 100000 200000
 			sphereOfInfluence = 1049598.93931162
 			hillSphere = 1225978.58343315
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/ike_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -103,24 +107,36 @@
 			meanAnomalyAtEpoch = 1.70000004768372
 			meanAnomalyAtEpochD = 97.4028279043159
 			epoch = 0
-			color = 0.5233987,0.5426883,0.6039216,1
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 135000
+			fadeStart = 0
 			fadeEnd = 140000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 0.078125
 				texture = BUILTIN/desertplanetmoon00
+				mainTex = BUILTIN/desertplanetmoon00
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/desertplanetmoon01
+				bumpMap = BUILTIN/desertplanetmoon01
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -131,6 +147,7 @@
 			fadeStart = 140000
 			fadeEnd = 145000
 			deactivateAltitude = 180000
+			mapMaxHeight = 20000
 			Material
 			{
 				saturation = 1
