--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Tylo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Tylo.cfg
@@ -1,4 +1,4 @@
-// KittopiaTech - a Kopernicus Visual Editor
+﻿// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -21,13 +21,17 @@
 			emissivity = 0.9
 			coreTemperatureOffset = 20
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,30000,30000,60000,120000,240000,480000,600000
+			timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
 			sphereOfInfluence = 10856518.3683586
 			hillSphere = 14757877.6267184
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/tylo_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -103,24 +107,36 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.8283582,0.6690585,0.6690585,1
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 95000
+			fadeStart = 0
 			fadeEnd = 100000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 0.078125
 				texture = BUILTIN/rockyMoon00
+				mainTex = BUILTIN/rockyMoon00
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/rockyMoon01
+				bumpMap = BUILTIN/rockyMoon01
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -131,6 +147,7 @@
 			fadeStart = 100000
 			fadeEnd = 125000
 			deactivateAltitude = 330000
+			mapMaxHeight = 16000
 			Material
 			{
 				saturation = 1
