mun kittopia export

--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
@@ -1,4 +1,4 @@
-// KittopiaTech - a Kopernicus Visual Editor
+﻿// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -21,13 +21,17 @@
 			emissivity = 0.9
 			coreTemperatureOffset = 5
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,5000,5000,10000,25000,50000,100000,200000
+			timewarpAltitudeLimits = 0 5000 5000 10000 25000 50000 100000 200000
 			sphereOfInfluence = 2429559.11656475
 			hillSphere = 3170563.33757116
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/mun_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = True
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -145,24 +149,36 @@
 			meanAnomalyAtEpoch = 1.70000004768372
 			meanAnomalyAtEpochD = 97.4028279043159
 			epoch = 0
-			color = 0.5233987,0.5426883,0.6039216,1
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 55000
+			fadeStart = 0
 			fadeEnd = 60000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 0.7238806,0.7346848,0.7346848,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 0.03
 				texture = BUILTIN/NewMunSurfaceMapDiffuse
+				mainTex = BUILTIN/NewMunSurfaceMapDiffuse
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/NewMunSurfaceMapNormals
+				bumpMap = BUILTIN/NewMunSurfaceMapNormals
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -173,6 +189,7 @@
 			fadeStart = 60000
 			fadeEnd = 120000
 			deactivateAltitude = 120750
+			mapMaxHeight = 9000
 			Material
 			{
 				saturation = 1
@@ -196,13 +213,8 @@
 				lowTex = BUILTIN/RockyGround
 				lowTexScale = 1,1
 				lowTexOffset = 0,0
-				lowBumpMap = BUILTIN/RockyGround2
-				lowBumpMapScale = 1,1
-				lowBumpMapOffset = 0,0
 				lowNearTiling = 1200
 				lowMultiFactor = 5
-				lowBumpNearTiling = 1200
-				lowBumpFarTiling = 5
 				midTex = BUILTIN/RockyGround
 				midTexScale = 1,1
 				midTexOffset = 0,0
@@ -212,17 +224,11 @@
 				midNearTiling = 1000
 				midMultiFactor = 4
 				midBumpNearTiling = 1000
-				midBumpFarTiling = 4
 				highTex = BUILTIN/RockyGround
 				highTexScale = 1,1
 				highTexOffset = 0,0
-				highBumpMap = BUILTIN/RockyGround2
-				highBumpMapScale = 1,1
-				highBumpMapOffset = 0,0
 				highNearTiling = 800
 				highMultiFactor = 3
-				highBumpNearTiling = 800
-				highBumpFarTiling = 3
 				lowStart = 0.2
 				lowEnd = 0.4
 				highStart = 0.6
@@ -231,6 +237,7 @@
 				fogColorRampScale = 1,1
 				fogColorRampOffset = 0,0
 				planetOpacity = 1
+				oceanFogDistance = 1000
 			}
 			FallbackMaterial
 			{
@@ -481,6 +488,7 @@
 					persistance = 0.5
 					seed = 1283704385
 					mode = Low
+					lacunarity = 2
 					order = 103
 					enabled = True
 				}
