--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
@@ -21,13 +21,17 @@
 			emissivity = 0.83
 			coreTemperatureOffset = 0
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,30000,30000,60000,100000,300000,600000,800000
+			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 			sphereOfInfluence = 47921949.369738
 			hillSphere = 125063736.748336
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/duna_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -85,8 +89,8 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.641791,0.2493882,0.158053,0.5254902
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
 		{
@@ -97,13 +101,13 @@
 			maxAltitude = 50000
 			altitude = 50000
 			atmosphereDepth = 50000
-			gasMassLapseRate = 6.34180556250155
+			gasMassLapseRate = 3.04406667000075
 			atmosphereMolarMass = 0.043
 			pressureCurveIsNormalized = False
 			staticPressureASL = 6.755
 			temperatureCurveIsNormalized = False
-			temperatureLapseRate = 0.0024
-			temperatureSeaLevel = 120
+			temperatureLapseRate = 0.005
+			temperatureSeaLevel = 250
 			ambientColor = 0.3058824,0.187128,0.2347621,1
 			lightColor = 0.5094656,0.5884027,0.6431373,0
 			pressureCurve
@@ -146,7 +150,15 @@
 				key = 65 20 -0.5202533 -0.5202533
 				key = 90 5 0 0
 			}
+			temperatureAxialSunBiasCurve
+			{
+				key = 0 0 0 0
+			}
 			temperatureAxialSunMultCurve
+			{
+				key = 0 0 0 0
+			}
+			temperatureEccentricityBiasCurve
 			{
 				key = 0 0 0 0
 			}
@@ -173,21 +185,36 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 95000
+			fadeStart = 0
 			fadeEnd = 97000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 0.078125
 				texture = BUILTIN/Duna5_00
+				mainTex = BUILTIN/Duna5_00
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/Duna5_01
+				bumpMap = BUILTIN/Duna5_01
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
 				rimPower = 2.06
 				rimBlend = 0.3
 				rimColorRamp = BUILTIN/desert_atmogradient
+				rimColorRampScale = 1,1
+				rimColorRampOffset = 0,0
+				localLightDirection = 0.001595139,0,0.9999988,0
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -198,6 +225,7 @@
 			fadeStart = 100000
 			fadeEnd = 110000
 			deactivateAltitude = 120000
+			mapMaxHeight = 10500
 			Material
 			{
 				saturation = 1
@@ -801,12 +829,10 @@
 				AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
-					cameraAlt = 0
-					cameraAtmosAlt = 0
 					DEBUG_SetEveryFrame = True
 					globalDensity = -1E-05
-					heightDensAtViewer = 0
 					heightFalloff = 6.75
+					oceanDepth = 0
 					order = 100
 					enabled = True
 				}
