eve kittopia exports

--- a/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
@@ -82,6 +82,7 @@
 				&groundTexEnd = 10000
 				&steepTexStart = 0
 				&steepTexEnd = 100000
+				&oceanFogDistance = 1000
 			}
 			%FallbackMaterial
 			{
