--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
@@ -1,4 +1,4 @@
-// KittopiaTech - a Kopernicus Visual Editor
+﻿// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -21,13 +21,17 @@
 			emissivity = 0.55
 			coreTemperatureOffset = 0
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,30000,30000,60000,120000,240000,480000,600000
+			timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
 			sphereOfInfluence = 85109364.7382441
 			hillSphere = 185949494.965972
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/eve_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -97,8 +101,8 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.4260764,0.1283791,0.8955224,1
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
 		{
@@ -109,22 +113,23 @@
 			maxAltitude = 90000
 			altitude = 90000
 			atmosphereDepth = 90000
-			gasMassLapseRate = 18.481833765233
+			gasMassLapseRate = 19.0254171112692
 			atmosphereMolarMass = 0.0430000014603138
 			pressureCurveIsNormalized = False
 			staticPressureASL = 506.625
 			temperatureCurveIsNormalized = False
-			temperatureLapseRate = 0.00466666666666667
-			temperatureSeaLevel = 420
+			temperatureLapseRate = 0.00453333333333333
+			temperatureSeaLevel = 408
 			ambientColor = 0.2235352,0.1943253,0.3058824,1
 			lightColor = 0.4498853,0.5149254,0.3473222,1
 			pressureCurve
 			{
 				key = 0 506.625 -0.08693577 -0.08693577
-				key = 9723.525 113.4918 -0.0149408 -0.0149408
-				key = 20000 29.0968 -0.003046887 -0.003046887
-				key = 45000 0.82 -6.321458E-05 -6.321458E-05
-				key = 80000 0.0035 -9.886503E-07 -9.886503E-07
+				key = 9723.525 113.5 -0.0149408 -0.0149408
+				key = 20000 24 -0.001997488 -0.001997488
+				key = 30000 5 -0.0009176003 -0.0009176003
+				key = 45000 0.5 -3.677358E-05 -3.677358E-05
+				key = 80000 0.0023 -6.030081E-07 -6.030081E-07
 				key = 90000 0 0 0
 			}
 			temperatureCurve
@@ -158,7 +163,15 @@
 				key = 65 12 0 0
 				key = 90 8 0 0
 			}
+			temperatureAxialSunBiasCurve
+			{
+				key = 0 0 0 0
+			}
 			temperatureAxialSunMultCurve
+			{
+				key = 0 0 0 0
+			}
+			temperatureEccentricityBiasCurve
 			{
 				key = 0 0 0 0
 			}
@@ -185,21 +198,36 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 105000
+			fadeStart = 0
 			fadeEnd = 110000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0.5,0.5,0.5,1
+				specColor = 0.5,0.5,0.5,1
 				shininess = 0.08314258
 				texture = BUILTIN/Eve2_00
+				mainTex = BUILTIN/Eve2_00
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/Eve2_01
+				bumpMap = BUILTIN/Eve2_01
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
 				rimPower = 2
 				rimBlend = 0.3
 				rimColorRamp = BUILTIN/purple_atmogradiant
+				rimColorRampScale = 1,1
+				rimColorRampOffset = 0,0
+				localLightDirection = -0.9999987,0,0.001594037,0
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -210,10 +238,11 @@
 			fadeStart = 110000
 			fadeEnd = 115000
 			deactivateAltitude = 130000
+			mapMaxHeight = 10000
 			Material
 			{
 				saturation = 1
-				contrast = 5
+				contrast = 1.25
 				tintColor = 1,1,1,0
 				powerNear = 0.6
 				powerFar = 0.2
@@ -233,13 +262,8 @@
 				lowTex = BUILTIN/SandyGround
 				lowTexScale = 1,1
 				lowTexOffset = 0,0
-				lowBumpMap = BUILTIN/quiet
-				lowBumpMapScale = 1,1
-				lowBumpMapOffset = 0,0
 				lowNearTiling = 20000
 				lowMultiFactor = 10
-				lowBumpNearTiling = 40000
-				lowBumpFarTiling = 10
 				midTex = BUILTIN/distantground
 				midTexScale = 1,1
 				midTexOffset = 0,0
@@ -249,17 +273,11 @@
 				midNearTiling = 20000
 				midMultiFactor = 10
 				midBumpNearTiling = 10000
-				midBumpFarTiling = 10
 				highTex = BUILTIN/snow
 				highTexScale = 1,1
 				highTexOffset = 0,0
-				highBumpMap = BUILTIN/quiet
-				highBumpMapScale = 1,1
-				highBumpMapOffset = 0,0
 				highNearTiling = 20000
 				highMultiFactor = 10
-				highBumpNearTiling = 10000
-				highBumpFarTiling = 10
 				lowStart = 0
 				lowEnd = 0.3
 				highStart = 0.8
@@ -269,6 +287,7 @@
 				fogColorRampScale = 1,1
 				fogColorRampOffset = 0,0
 				planetOpacity = 1
+				oceanFogDistance = 1000
 			}
 			FallbackMaterial
 			{
@@ -290,12 +309,9 @@
 			{
 				bounceCombine = Average
 				frictionCombine = Maximum
-				frictionDirection2 = 0,0,0
 				bounciness = 0
 				staticFriction = 0.8
-				staticFriction2 = 0
 				dynamicFriction = 0.6
-				dynamicFriction2 = 0
 			}
 			Mods
 			{
@@ -666,12 +682,10 @@
 				AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
-					cameraAlt = 0
-					cameraAtmosAlt = 0
 					DEBUG_SetEveryFrame = True
 					globalDensity = -1E-05
-					heightDensAtViewer = 0
 					heightFalloff = 6.75
+					oceanDepth = 0
 					order = 100
 					enabled = True
 				}
@@ -685,12 +699,10 @@
 				AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 5000
-					cameraAlt = 0
-					cameraAtmosAlt = 0
 					DEBUG_SetEveryFrame = False
 					globalDensity = -7.5E-06
-					heightDensAtViewer = 0
 					heightFalloff = 0.2
+					oceanDepth = 0
 					order = 100
 					enabled = True
 				}
