pol kittopia export

--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Pol.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Pol.cfg
@@ -1,5 +1,4 @@
 // KittopiaTech - a Kopernicus Visual Editor
-// REMOVED VertexHeightOffset AND REPLACED WITH FixedOffset
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -22,13 +21,17 @@
 			emissivity = 0.5
 			coreTemperatureOffset = 7
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,5000,5000,5000,8000,12000,30000,90000
+			timewarpAltitudeLimits = 0 5000 5000 5000 8000 12000 30000 90000
 			sphereOfInfluence = 1042138.89230178
 			hillSphere = 2038945.47430365
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/pol_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -80,24 +83,36 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.4347174,0.4477612,0.3385198,0.5764706
-			cameraSmaRatioBounds = 0.12,12
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 130000
+			fadeStart = 0
 			fadeEnd = 135000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 0.078125
 				texture = BUILTIN/gp1minormoon200
+				mainTex = BUILTIN/gp1minormoon200
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/gp1minormoon201
+				bumpMap = BUILTIN/gp1minormoon201
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -108,6 +123,7 @@
 			fadeStart = 135000
 			fadeEnd = 140000
 			deactivateAltitude = 180000
+			mapMaxHeight = 6000
 			Material
 			{
 				saturation = 1
@@ -225,6 +241,12 @@
 					persistence = 0.5
 					seed = 5645667
 					order = 21
+					enabled = True
+				}
+				VertexHeightOffset
+				{
+					offset = -700
+					order = 80
 					enabled = True
 				}
 				AltitudeAlpha
