jool kittopia export

--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
@@ -16,17 +16,21 @@
 			rotationPeriod = 36000
 			tidallyLocked = False
 			initialRotation = 0
-			inverseRotThresholdAltitude = 1000000
+			inverseRotThresholdAltitude = 220000
 			albedo = 0.52
 			emissivity = 0.48
 			coreTemperatureOffset = 80
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,0,15000,60000,150000,300000,600000,1200000
+			timewarpAltitudeLimits = 0 0 15000 60000 150000 300000 600000 1200000
 			sphereOfInfluence = 2455985185.42347
 			hillSphere = 4065824625.34358
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			nonExactThreshold = 0.05
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			ScienceValues
 			{
 				landedDataValue = 30
@@ -51,8 +55,8 @@
 			meanAnomalyAtEpoch = 0.100000001490116
 			meanAnomalyAtEpochD = 5.72957803668559
 			epoch = 0
-			color = 0.3300661,0.5223881,0.07805798,1
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
 		{
@@ -112,7 +116,15 @@
 				key = 65 18 0 0
 				key = 90 5 0 0
 			}
+			temperatureAxialSunBiasCurve
+			{
+				key = 0 0 0 0
+			}
 			temperatureAxialSunMultCurve
+			{
+				key = 0 0 0 0
+			}
+			temperatureEccentricityBiasCurve
 			{
 				key = 0 0 0 0
 			}
@@ -123,7 +135,7 @@
 				ESun = 30
 				g = -0.85
 				innerRadius = 5996250
-				invWaveLength = 4.83111,7.921115,1.906873,0.5
+				invWaveLength = 4.83111,7.921114,1.906873,0.5
 				Km = 0.00015
 				Kr = 0.00125
 				outerRadius = 6150000
@@ -139,21 +151,36 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 29000
+			fadeStart = 0
 			fadeEnd = 30000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 0.7910448,0.7910448,0.7910448,1
-				specular = 0,0,0,1
+				specColor = 0,0,0,1
 				shininess = 1
 				texture = BUILTIN/gas1_clouds
+				mainTex = BUILTIN/gas1_clouds
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/cloud_normal
+				bumpMap = BUILTIN/cloud_normal
+				bumpMapScale = 15,8
+				bumpMapOffset = 0,0
+				opacity = 1
 				rimPower = 2.48
 				rimBlend = 0.29
 				rimColorRamp = BUILTIN/gas1_atmogradiant
+				rimColorRampScale = 1,1
+				rimColorRampOffset = 0,0
+				localLightDirection = -0.9999988,0,0.001599908,0
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 	}
 }
