--- a/GameData/Sigma/Dimensions/Configs/Bodies/Jool.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Jool.cfg
@@ -5,7 +5,7 @@
 		%Properties
 		{
 			rotationPeriod = 36000
-			inverseRotThresholdAltitude = 1000000
+			inverseRotThresholdAltitude = 220000
 			timewarpAltitudeLimits = 0 0 15000 60000 150000 300000 600000 1200000
 			%ScienceValues
 			{
