laythe kittopia exports

--- a/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
@@ -151,10 +151,11 @@
 		{
 			%Material
 			{
-				&groundTexStart = 20000
-				&groundTexEnd = 60000
-				&steepTexStart = 100000
-				&steepTexEnd = 200000
+				&groundTexStart = 0
+				&groundTexEnd = 10000
+				&steepTexStart = 10000
+				&steepTexEnd = 100000
+				&oceanFogDistance = 1000
 			}
 			%FallbackMaterial
 			{
