--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -1,4 +1,4 @@
-// KittopiaTech - a Kopernicus Visual Editor
+﻿// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -21,13 +21,17 @@
 			emissivity = 0.7
 			coreTemperatureOffset = 80
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,30000,30000,60000,120000,240000,480000,600000
+			timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
 			sphereOfInfluence = 3723645.81113302
 			hillSphere = 5186318.66159496
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/laythe_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -85,8 +89,8 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.1347182,0.1694476,0.3059701,0.5411765
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
 		{
@@ -97,13 +101,13 @@
 			maxAltitude = 50000
 			altitude = 50000
 			atmosphereDepth = 50000
-			gasMassLapseRate = 4.93490965516617
+			gasMassLapseRate = 4.84741125702493
 			atmosphereMolarMass = 0.0289644002914429
 			pressureCurveIsNormalized = False
 			staticPressureASL = 81.0599975585938
 			temperatureCurveIsNormalized = False
-			temperatureLapseRate = 0.00554
-			temperatureSeaLevel = 277
+			temperatureLapseRate = 0.00564
+			temperatureSeaLevel = 282
 			ambientColor = 0.187128,0.2393932,0.3058824,1
 			lightColor = 0.8432836,0.6682193,0.4983039,0
 			pressureCurve
@@ -152,7 +156,15 @@
 				key = 65 11 0 0
 				key = 90 2 0 0
 			}
+			temperatureAxialSunBiasCurve
+			{
+				key = 0 0 0 0
+			}
 			temperatureAxialSunMultCurve
+			{
+				key = 0 0 0 0
+			}
+			temperatureEccentricityBiasCurve
 			{
 				key = 0 0 0 0
 			}
@@ -163,7 +175,7 @@
 				ESun = 30
 				g = -0.85
 				innerRadius = 499687.5
-				invWaveLength = 1.97745,5.015613,16.21895,0.5
+				invWaveLength = 1.977449,5.015613,16.21895,0.5
 				Km = 0.00015
 				Kr = 0.00125
 				outerRadius = 512500
@@ -179,21 +191,36 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 55000
+			fadeStart = 0
 			fadeEnd = 60000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0.3059701,0.3059701,0.3059701,1
+				specColor = 0.3059701,0.3059701,0.3059701,1
 				shininess = 0.1661175
 				texture = BUILTIN/newoceanmoon00
+				mainTex = BUILTIN/newoceanmoon00
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/newoceanmoon01
+				bumpMap = BUILTIN/newoceanmoon01
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
 				rimPower = 5
 				rimBlend = 1
-				rimColorRamp = BUILTIN/AerialRampKerbin
+				rimColorRamp = BUILTIN/AerialRampKerbin2
+				rimColorRampScale = 1,1
+				rimColorRampOffset = 0,0
+				localLightDirection = 0.00159654,0,0.9999987,0
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -204,71 +231,56 @@
 			fadeStart = 60000
 			fadeEnd = 120000
 			deactivateAltitude = 160000
+			mapMaxHeight = 8000
 			Material
 			{
 				saturation = 1
-				contrast = 1.55
-				tintColor = 1,1,1,0
-				texTiling = 1000
-				texPower = 0.5
-				multiPower = 0.3
-				groundTexStart = 20000
-				groundTexEnd = 60000
-				steepTiling = 300
+				contrast = 1
+				tintColor = 0.5147059,0.5147059,0.5147059,0
+				powerNear = 0.5
+				powerFar = 0.5
+				groundTexStart = 0
+				groundTexEnd = 10000
 				steepPower = 1
-				steepTexStart = 100000
-				steepTexEnd = 200000
-				deepTex = BUILTIN/SandyGround
-				deepTexScale = 1,1
-				deepTexOffset = 0,0
-				deepMultiTex = BUILTIN/terrain_sand00
-				deepMultiTexScale = 1,1
-				deepMultiTexOffset = 0,0
-				deepMultiFactor = 1
-				mainTex = BUILTIN/SandyGround
-				mainTexScale = 1,1
-				mainTexOffset = 0,0
-				mainMultiTex = BUILTIN/terrain_sand00
-				mainMultiTexScale = 1,1
-				mainMultiTexOffset = 0,0
-				mainMultiFactor = 1
-				highTex = BUILTIN/RockyGround
-				highTexScale = 1,1
-				highTexOffset = 0,0
-				highMultiTex = BUILTIN/terrain_sand00
-				highMultiTexScale = 1,1
-				highMultiTexOffset = 0,0
-				highMultiFactor = 1
-				snowTex = BUILTIN/RockyGround
-				snowTexScale = 1,1
-				snowTexOffset = 0,0
-				snowMultiTex = BUILTIN/terrain_sand00
-				snowMultiTexScale = 1,1
-				snowMultiTexOffset = 0,0
-				snowMultiFactor = 1
+				steepTexStart = 10000
+				steepTexEnd = 100000
 				steepTex = BUILTIN/Cliff (Layered Rock)
 				steepTexScale = 1,1
 				steepTexOffset = 0,0
-				deepStart = 0
-				deepEnd = 0.6
-				mainLoStart = 0
-				mainLoEnd = 0.1
-				mainHiStart = 0.2
-				mainHiEnd = 0.3
-				hiLoStart = 0.3
-				hiLoEnd = 0.5
-				hiHiStart = 0.9
-				hiHiEnd = 0.95
-				snowStart = 0.95
-				snowEnd = 1
-				fogColor = 0.7238806,0.9304873,1,1
-				heightFallOff = 1.75
+				steepBumpMap = BUILTIN/Cliff (Layered Rock)_NRM
+				steepBumpMapScale = 1,1
+				steepBumpMapOffset = 0,0
+				steepNearTiling = 2000
+				steepTiling = 100
+				lowTex = BUILTIN/SandyGround
+				lowTexScale = 1,1
+				lowTexOffset = 0,0
+				lowNearTiling = 2000
+				lowMultiFactor = 8
+				midTex = BUILTIN/RockyGround
+				midTexScale = 1,1
+				midTexOffset = 0,0
+				midBumpMap = BUILTIN/cloud_normal
+				midBumpMapScale = 1,1
+				midBumpMapOffset = 0,0
+				midNearTiling = 1000
+				midMultiFactor = 2
+				midBumpNearTiling = 1000
+				highTex = BUILTIN/snow
+				highTexScale = 1,1
+				highTexOffset = 0,0
+				highNearTiling = 1000
+				highMultiFactor = 2
+				lowStart = 0.2
+				lowEnd = 0.4
+				highStart = 0.6
+				highEnd = 0.9
 				globalDensity = -8E-06
-				atmosphereDepth = 56000
 				fogColorRamp = BUILTIN/blue_atmogradient
 				fogColorRampScale = 1,1
 				fogColorRampOffset = 0,0
 				planetOpacity = 1
+				oceanFogDistance = 1000
 			}
 			FallbackMaterial
 			{
@@ -290,12 +302,9 @@
 			{
 				bounceCombine = Average
 				frictionCombine = Maximum
-				frictionDirection2 = 0,0,0
 				bounciness = 0
 				staticFriction = 0.8
-				staticFriction2 = 0
 				dynamicFriction = 0.6
-				dynamicFriction2 = 0
 			}
 			Mods
 			{
@@ -811,13 +820,11 @@
 				AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
-					cameraAlt = 0
-					cameraAtmosAlt = 0
 					DEBUG_SetEveryFrame = True
 					globalDensity = -1E-05
-					heightDensAtViewer = 0
 					heightFalloff = 6.75
-					order = 100
+					oceanDepth = 0
+					order = 101
 					enabled = True
 				}
 				VertexHeightNoise
@@ -856,12 +863,10 @@
 				AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 5000
-					cameraAlt = 0
-					cameraAtmosAlt = 0
 					DEBUG_SetEveryFrame = False
 					globalDensity = -7.5E-06
-					heightDensAtViewer = 0
 					heightFalloff = 0.2
+					oceanDepth = 0
 					order = 100
 					enabled = True
 				}
@@ -875,7 +880,8 @@
 					persistance = 0.7
 					seed = 3475645
 					mode = Low
-					order = 20
+					lacunarity = 1.5
+					order = 30
 					enabled = True
 				}
 				VertexHeightMap
@@ -884,7 +890,7 @@
 					offset = -2000
 					deformity = 8000
 					scaleDeformityByRadius = False
-					order = 100
+					order = 99
 					enabled = True
 				}
 			}
