kerbin kittopia export

--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -7,7 +7,7 @@
 		name = Kerbin
 		Properties
 		{
-			description = A unique world, Kerbin has flat plains, soaring mountains and wide, blue oceans. Home to the Kerbals, it has just the right conditions to support a vast, seemingly undepletable population of the eager green creatures.Reaching a stable orbit around Kerbin is one of the first things budding space programs strive for. It is said that he who can get his ship into orbit is halfway to anywhere.
+			description = A unique world, Kerbin has flat plains, soaring mountains and wide, blue oceans. Home to the Kerbals, it has just the right conditions to support a vast, seemingly undepletable population of the eager green creatures.Reaching a stable orbit around Kerbin is one of the first things budding space programs strive for. It is said that those who can get their ship into orbit are halfway to anywhere.
 			radius = 600000
 			geeASL = 1
 			mass = 5.29157926281091E+22
@@ -21,13 +21,17 @@
 			emissivity = 0.65
 			coreTemperatureOffset = 0
 			isHomeWorld = True
-			timewarpAltitudeLimits = 0,30000,30000,60000,120000,240000,480000,600000
+			timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
 			sphereOfInfluence = 84159286.4796305
 			hillSphere = 196414707.77848
 			solarRotationPeriod = True
 			navballSwitchRadiusMult = 0.06
 			biomeMap = BUILTIN/kerbin_biome
+			nonExactThreshold = -1
+			exactSearch = False
 			useTheInName = False
+			selectable = True
+			hiddenRnD = False
 			Biomes
 			{
 				Biome
@@ -109,8 +113,8 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.491869,0.7164179,0.688153,1
-			cameraSmaRatioBounds = 0.03,25
+			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
 		{
@@ -121,13 +125,13 @@
 			maxAltitude = 70000
 			altitude = 70000
 			atmosphereDepth = 70000
-			gasMassLapseRate = 8.30624104060862
+			gasMassLapseRate = 8.33518264702189
 			atmosphereMolarMass = 0.0289644002914429
 			pressureCurveIsNormalized = False
 			staticPressureASL = 101.324996948242
 			temperatureCurveIsNormalized = False
-			temperatureLapseRate = 0.00411428571428571
-			temperatureSeaLevel = 288
+			temperatureLapseRate = 0.0041
+			temperatureSeaLevel = 287
 			ambientColor = 0.2431373,0.2509804,0.254902,1
 			lightColor = 0.65,0.57,0.475,0.5
 			pressureCurve
@@ -198,7 +202,15 @@
 				key = 76 8.582909 -0.6021729 -0.6021729
 				key = 90 5 0 0
 			}
+			temperatureAxialSunBiasCurve
+			{
+				key = 0 0 0 0
+			}
 			temperatureAxialSunMultCurve
+			{
+				key = 0 0 0 0
+			}
+			temperatureEccentricityBiasCurve
 			{
 				key = 0 0 0 0
 			}
@@ -225,21 +237,36 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 55000
+			fadeStart = 0
 			fadeEnd = 60000
 			sphericalModel = False
 			deferMesh = False
 			Material
 			{
 				color = 1,1,1,1
-				specular = 0.1647059,0.1647059,0.1647059,1
+				specColor = 0.1647059,0.1647059,0.1647059,1
 				shininess = 0.1085012
 				texture = BUILTIN/KerbinScaledSpace300
+				mainTex = BUILTIN/KerbinScaledSpace300
+				mainTexScale = 1,1
+				mainTexOffset = 0,0
 				normals = BUILTIN/KerbinScaledSpace401
+				bumpMap = BUILTIN/KerbinScaledSpace401
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				opacity = 1
 				rimPower = 3.54
 				rimBlend = 0.81
-				rimColorRamp = BUILTIN/AerialRampKerbin
+				rimColorRamp = BUILTIN/AerialRampKerbin2
+				rimColorRampScale = 1,1
+				rimColorRampOffset = 0,0
+				localLightDirection = 0.001609981,0,0.9999987,0
+				resourceMapScale = 1,1
+				resourceMapOffset = 0,0
 			}
+		}
+		Particles
+		{
 		}
 		PQS
 		{
@@ -250,6 +277,7 @@
 			fadeStart = 60000
 			fadeEnd = 120000
 			deactivateAltitude = 160000
+			mapMaxHeight = 9600
 			Material
 			{
 				saturation = 1
@@ -273,13 +301,8 @@
 				lowTex = BUILTIN/terrain_sand00
 				lowTexScale = 1,1
 				lowTexOffset = 0,0
-				lowBumpMap = BUILTIN/Waterbump
-				lowBumpMapScale = 1,1
-				lowBumpMapOffset = 0,0
 				lowNearTiling = 4000
 				lowMultiFactor = 10
-				lowBumpNearTiling = 4000
-				lowBumpFarTiling = 10
 				midTex = BUILTIN/terrain_grass00_new
 				midTexScale = 1,1
 				midTexOffset = 0,0
@@ -289,26 +312,21 @@
 				midNearTiling = 4000
 				midMultiFactor = 100
 				midBumpNearTiling = 1000
-				midBumpFarTiling = 100
 				highTex = BUILTIN/terrain_snow00
 				highTexScale = 1,1
 				highTexOffset = 0,0
-				highBumpMap = BUILTIN/05_NORMAL
-				highBumpMapScale = 1,1
-				highBumpMapOffset = 0,0
 				highNearTiling = 4000
 				highMultiFactor = 4
-				highBumpNearTiling = 2000
-				highBumpFarTiling = 4
 				lowStart = 0.02
 				lowEnd = 0.1
 				highStart = 0.5
 				highEnd = 1
 				globalDensity = -8E-06
-				fogColorRamp = BUILTIN/AerialRampKerbin
+				fogColorRamp = BUILTIN/AerialRampKerbin2
 				fogColorRampScale = 1,1
 				fogColorRampOffset = 0,0
-				planetOpacity = 0
+				planetOpacity = 1
+				oceanFogDistance = 1000
 			}
 			FallbackMaterial
 			{
@@ -330,12 +348,9 @@
 			{
 				bounceCombine = Average
 				frictionCombine = Maximum
-				frictionDirection2 = 0,0,0
 				bounciness = 0
 				staticFriction = 0.8
-				staticFriction2 = 0
 				dynamicFriction = 0.6
-				dynamicFriction2 = 0
 			}
 			Mods
 			{
@@ -460,7 +475,7 @@
 							coveragePersistance = 0.5
 							coverageSeed = 121214
 							name = BaseBeach
-							latDelta = 1
+							latDelta = 0
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -541,7 +556,7 @@
 							coveragePersistance = 0.5
 							coverageSeed = 14554
 							name = BaseLand
-							latDelta = 1
+							latDelta = 0
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -698,7 +713,7 @@
 							coveragePersistance = 0.5
 							coverageSeed = 1247389
 							name = BaseSnow
-							latDelta = 0
+							latDelta = 1
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -774,7 +789,7 @@
 							coveragePersistance = 0.5
 							coverageSeed = 121221
 							name = Tundra
-							latDelta = 0
+							latDelta = 1
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -855,7 +870,7 @@
 							coveragePersistance = 0.6
 							coverageSeed = 44473
 							name = DesertGround
-							latDelta = 1
+							latDelta = 0
 							latitudeDouble = False
 							lonDelta = 0
 							minimumRealHeight = 0
@@ -941,9 +956,9 @@
 							coveragePersistance = 0.6
 							coverageSeed = 44473
 							name = DesertMountains
-							latDelta = 1
+							latDelta = 0
 							latitudeDouble = False
-							lonDelta = 0.476008294508971
+							lonDelta = 0
 							minimumRealHeight = 0
 							noiseBlend = 0.5
 							noiseColor = 0.2462686,0.2286743,0.2144087,1
@@ -1012,7 +1027,7 @@
 							coveragePersistance = 0.6
 							coverageSeed = 44473
 							name = RockyGround
-							latDelta = 1
+							latDelta = 0
 							latitudeDouble = False
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -1093,7 +1108,7 @@
 							coveragePersistance = 0.7
 							coverageSeed = 44473
 							name = IceCaps
-							latDelta = 0
+							latDelta = 1
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 20
@@ -1169,7 +1184,7 @@
 							coveragePersistance = 0.7
 							coverageSeed = 44473
 							name = Ocean Bottom
-							latDelta = 1
+							latDelta = 0
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -1255,9 +1270,9 @@
 							coveragePersistance = 0.7
 							coverageSeed = 4563456
 							name = Savannah
-							latDelta = 0.505546810006219
+							latDelta = 0
 							latitudeDouble = False
-							lonDelta = 0
+							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 1
 							noiseColor = 0.5,0.4645949,0.2627857,1
@@ -1500,12 +1515,10 @@
 				AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
-					cameraAlt = 548.915972246672
-					cameraAtmosAlt = 0.00365944
 					DEBUG_SetEveryFrame = True
 					globalDensity = -1E-05
-					heightDensAtViewer = 0.9756014
 					heightFalloff = 6.75
+					oceanDepth = 0
 					order = 100
 					enabled = True
 				}
@@ -1559,6 +1572,16 @@
 					smoothHeight = 0.1
 					useAlphaHeightSmoothing = True
 					order = 99999
+					enabled = True
+				}
+				AerialPerspectiveMaterial
+				{
+					atmosphereDepth = 5000
+					DEBUG_SetEveryFrame = False
+					globalDensity = -7.5E-06
+					heightFalloff = 0.2
+					oceanDepth = 0
+					order = 100
 					enabled = True
 				}
 				FlattenArea
