--- a/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
@@ -137,6 +137,7 @@
 				&groundTexEnd = 10000
 				&steepTexStart = 10000
 				&steepTexEnd = 100000
+				&oceanFogDistance = 1000
 			}
 			%FallbackMaterial
 			{
